==> apache/nuttx/arch/arm/src/nrf53/nrf53_pwm.c <==
#include <nuttx/config.h>
#include <assert.h>
#include <debug.h>
#include <errno.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdio.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "nrf53_gpio.h"
#include "nrf53_pwm.h"
#include "hardware/nrf53_pwm.h"
#include "hardware/nrf53_utils.h"
#define PWM_POLARITY_DEFAULT (PWM_DECODER_POL_FALLING)
#define PWM_SEQ0_LEN         (4)

static inline void nrf53_pwm_putreg(struct nrf53_pwm_s *priv,
                                    uint32_t offset,
                                    uint32_t value)
{
  putreg32(value, priv->base + offset);
}

static inline uint32_t nrf53_pwm_getreg(struct nrf53_pwm_s *priv,
                                        uint32_t offset)
{
  return getreg32(priv->base + offset);
}

static int nrf53_pwm_setup(struct pwm_lowerhalf_s *dev)
{
  struct nrf53_pwm_s *priv = (struct nrf53_pwm_s *)dev;
  int                 ret  = OK;
  uint32_t            regval = 0;
  uint32_t            pin = 0;
  uint32_t            port = 0;

  DEBUGASSERT(dev);

  /* Configure channels */

  if (priv->ch0_pin != 0)
    {
      nrf53_gpio_config(priv->ch0_pin);

      pin  = GPIO_PIN_DECODE(priv->ch0_pin);
      port = GPIO_PORT_DECODE(priv->ch0_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf53_pwm_putreg(priv, NRF53_PWM_PSEL0_OFFSET, regval);
    }

  if (priv->ch1_pin != 0)
    {
      nrf53_gpio_config(priv->ch1_pin);

      pin  = GPIO_PIN_DECODE(priv->ch1_pin);
      port = GPIO_PORT_DECODE(priv->ch1_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf53_pwm_putreg(priv, NRF53_PWM_PSEL1_OFFSET, regval);
    }

  if (priv->ch2_pin != 0)
    {
      nrf53_gpio_config(priv->ch2_pin);

      pin  = GPIO_PIN_DECODE(priv->ch2_pin);
      port = GPIO_PORT_DECODE(priv->ch2_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf53_pwm_putreg(priv, NRF53_PWM_PSEL2_OFFSET, regval);
    }

  if (priv->ch3_pin != 0)
    {
      nrf53_gpio_config(priv->ch3_pin);

      pin  = GPIO_PIN_DECODE(priv->ch3_pin);
      port = GPIO_PORT_DECODE(priv->ch3_pin);

      regval = (port << PWM_PSEL_PORT_SHIFT);
      regval |= (pin << PWM_PSEL_PIN_SHIFT);

      nrf53_pwm_putreg(priv, NRF53_PWM_PSEL3_OFFSET, regval);
    }

  /* Configure PWM */

  ret = nrf53_pwm_configure(priv);
  if (ret < 0)
    {
      pwmerr("ERROR: nrf53_pwm_configure failed %d\n", ret);
      goto errout;
    }

  /* Enable PWM */

  nrf53_pwm_putreg(priv, NRF53_PWM_ENABLE_OFFSET, 1);

errout:
  return ret;
}

static int nrf53_pwm_shutdown(struct pwm_lowerhalf_s *dev)
{
  struct nrf53_pwm_s *priv = (struct nrf53_pwm_s *)dev;
  int                 ret  = OK;

  DEBUGASSERT(dev);

  /* Disable PWM */

  nrf53_pwm_putreg(priv, NRF53_PWM_ENABLE_OFFSET, 0);

  return ret;
}

static int nrf53_pwm_start(struct pwm_lowerhalf_s *dev,
                           const struct pwm_info_s *info,
                           void *handle)
{
#error Not supported
}

static int nrf53_pwm_start(struct pwm_lowerhalf_s *dev,
                           const struct pwm_info_s *info)
{
  struct nrf53_pwm_s *priv = (struct nrf53_pwm_s *)dev;
  int                 ret  = OK;
#ifdef CONFIG_PWM_MULTICHAN
  int                 i    = 0;
#endif

  DEBUGASSERT(dev);

  /* If frequency has not changed we just update duty */

  if (info->frequency != priv->frequency)
    {
      /* Update frequency */

      ret = nrf53_pwm_freq(priv, info->frequency);

      if (ret == OK)
        {
          priv->frequency = info->frequency;
        }
    }

#ifdef CONFIG_PWM_MULTICHAN
      for (i = 0; ret == OK && i < CONFIG_PWM_NCHANNELS; i++)
        {
          /* Break the loop if all following channels are not configured */

          if (info->channels[i].channel == -1)
            {
              break;
            }

          /* Set output if channel configured */

          if (info->channels[i].channel != 0)
            {
              ret = nrf53_pwm_duty(priv,
                                   (info->channels[i].channel - 1),
                                   info->channels[i].duty);
            }
        }

#else
      ret = nrf53_pwm_duty(dev,
                           (info->channels[0].channel - 1),
                           info->duty);
#endif /* CONFIG_PWM_MULTICHAN */

  /* Start sequence 0 */

  nrf53_pwm_putreg(priv, NRF53_PWM_TASKS_SEQSTART0_OFFSET, 1);

  /* Wait for sequence started */

  while (nrf53_pwm_getreg(priv, NRF53_PWM_EVENTS_SEQSTARTED0_OFFSET) != 1);

  return ret;
}

static int nrf53_pwm_stop(struct pwm_lowerhalf_s *dev)
{
  struct nrf53_pwm_s *priv = (struct nrf53_pwm_s *)dev;

  DEBUGASSERT(dev);

  /* Stop PWM */

  nrf53_pwm_putreg(priv, NRF53_PWM_TASKS_STOP_OFFSET, 1);

  /* Wait for PWM stopped */

  while (nrf53_pwm_getreg(priv, NRF53_PWM_EVENTS_STOPPED_OFFSET) != 1);

  return OK;
}

struct pwm_lowerhalf_s *nrf53_pwminitialize(int pwm)
{
  struct nrf53_pwm_s *lower = NULL;

  pwminfo("Initialize PWM%u\n", pwm);

  switch (pwm)
    {
#ifdef CONFIG_NRF53_PWM0
      case 0:
        {
          lower = &g_nrf53_pwm0;
          break;
        }
#endif

#ifdef CONFIG_NRF53_PWM1
      case 1:
        {
          lower = &g_nrf53_pwm1;
          break;
        }
#endif

#ifdef CONFIG_NRF53_PWM2
      case 2:
        {
          lower = &g_nrf53_pwm2;
          break;
        }
#endif

      default:
        {
          pwmerr("ERROR: No such PWM device %d\n", pwm);
          lower = NULL;
          goto errout;
        }
    }

errout:
  return (struct pwm_lowerhalf_s *)lower;
}
