==> apache/nuttx/arch/arm/src/samv7/sam_pwm.c <==
#include <nuttx/config.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <time.h>
#include <string.h>
#include <debug.h>
#include <errno.h>
#include <nuttx/irq.h>
#include <nuttx/timers/pwm.h>
#include "arm_internal.h"
#include "chip.h"
#include "sam_config.h"
#include "sam_pwm.h"
#include "sam_periphclks.h"
#include "sam_gpio.h"
#include "hardware/sam_pwm.h"
#include "hardware/sam_pinmap.h"
#include "hardware/sam_pio.h"
#include <arch/board/board.h>
#include <sys/time.h>
#  define PWM_NCHANNELS  CONFIG_PWM_NCHANNELS
#  define PWM_NCHANNELS  1
#define CHANNEL_OFFSET   0x20
#define CLK_FREQ         BOARD_MCK_FREQUENCY
#define PWM_RES          65535

static void pwm_putreg(struct sam_pwm_s *priv, uint32_t offset,
                       uint32_t value)
{
  putreg32(value, priv->base + offset);
}

static uint32_t pwm_getreg(struct sam_pwm_s *priv, uint32_t offset)
{
  return getreg32(priv->base + offset);
}

static int pwm_setup(struct pwm_lowerhalf_s *dev)
{
  struct sam_pwm_s *priv = (struct sam_pwm_s *)dev;
  gpio_pinset_t pin = 0;
  uint8_t channel;
  uint32_t regval;

  /* Unlock User Interface */

  regval = WPCR_WPRCMD_SEL(0) | WPCR_WPRG_MASK | WPCR_WPKEY_SEL(0x50574d);
  pwm_putreg(priv, SAMV7_PWM_WPCR, regval);

  /* Disable all channels */

  regval = CHID_SEL(CHID_MASK);
  pwm_putreg(priv, SAMV7_PWM_DIS, regval);

  for (int i = 0; i < priv->channels_num; i++)
    {
      pin = priv->channels[i].pin;

      if (pin != 0)
        {
          sam_configgpio(pin);
        }

      channel = priv->channels[i].channel;

      regval = CMR_CPOL | CMR_DPOLI;
      pwm_putreg(priv, SAMV7_PWM_CMRX + (channel * CHANNEL_OFFSET), regval);

      /* Reset duty cycle register */

      pwm_putreg(priv, SAMV7_PWM_CDTYX + (channel * CHANNEL_OFFSET), 0);

      /* Reset period register */

      pwm_putreg(priv, SAMV7_PWM_CPRDX + (channel * CHANNEL_OFFSET), 0);

      /* Reset Dead Time Register */

      pwm_putreg(priv, SAMV7_PWM_DTX + (channel * CHANNEL_OFFSET), 0);

      /* Fault protection registers */

      pwm_putreg(priv, SAMV7_PWM_FPV1, 0);
      pwm_putreg(priv, SAMV7_PWM_FPV2, 0);
      pwm_putreg(priv, SAMV7_PWM_FPE, 0);
    }

  return OK;
}

static int pwm_shutdown(struct pwm_lowerhalf_s *dev)
{
  struct sam_pwm_s *priv = (struct sam_pwm_s *)dev;
  uint32_t regval;

  /* Disable all channels and interrupts */

  regval = CHID_SEL(CHID_MASK);
  pwm_putreg(priv, SAMV7_PWM_DIS, regval);

  regval = IR1_CHID_SEL(CHID_MASK);
  pwm_putreg(priv, SAMV7_PWM_IDR1, regval);

  return OK;
}

static int pwm_start(struct pwm_lowerhalf_s *dev,
                     const struct pwm_info_s *info)
{
  struct sam_pwm_s *priv = (struct sam_pwm_s *)dev;
  uint32_t regval;

#ifdef CONFIG_PWM_MULTICHAN
      for (int i = 0; i < PWM_NCHANNELS; i++)
        {
          int8_t index = info->channels[i].channel;

          /* Break the loop if all following channels are not configured */

          if (index == -1)
            {
              break;
            }

          /* Configure the module freq only if is set to be used */

          if (index > 0 && (index - 1) < priv->channels_num)
            {
              /* Set the frequency and enable PWM output for each channel */

              pwm_set_freq(dev, priv->channels[index - 1].channel,
                           info->frequency);
              pwm_set_output(dev, priv->channels[index - 1].channel,
                             info->channels[i].duty);

          if (info->channels[i].ch_outp_ovrwr)
            {
              regval = pwm_getreg(priv, SAMV7_PWM_OOV);
              regval &= ~(info->channels[i].ch_outp_ovrwr_val
                  << priv->channels[i].channel);
              pwm_putreg(priv, SAMV7_PWM_OOV, regval);

              regval = (1 << priv->channels[i].channel);
              pwm_putreg(priv, SAMV7_PWM_OSS, regval);
            }
          else
            {
              /* Release overwrite of channel */

              regval = (1 << priv->channels[i].channel);
              pwm_putreg(priv, SAMV7_PWM_OSC, regval);
            }
            }
        }
#else
      /* Set the frequency and enable PWM output just for first channel */

      pwm_set_freq(dev, priv->channels[0].channel, info->frequency);
      pwm_set_output(dev, priv->channels[0].channel, info->duty);
#endif

  return OK;
}

static int pwm_stop(struct pwm_lowerhalf_s *dev)
{
  struct sam_pwm_s *priv = (struct sam_pwm_s *)dev;
  uint32_t regval;

#ifdef CONFIG_PWM_MULTICHAN
  for (int i = 0; i < priv->channels_num; i++)
    {
      regval = CHID_SEL(1 << priv->channels[i].channel);
      pwm_putreg(priv, SAMV7_PWM_DIS, regval);
    }

#else
  regval = CHID_SEL(1 << priv->channels[0].channel);
  pwm_putreg(priv, SAMV7_PWM_DIS, regval);
#endif /* CONFIG_PWM_MULTICHAN */

  return OK;
}

struct pwm_lowerhalf_s *sam_pwminitialize(int pwm)
{
  struct sam_pwm_s *priv;

  pwminfo("Initializing pwm %d\n", pwm);

  switch (pwm)
  {
#ifdef CONFIG_SAMV7_PWM0
    case 0:
      sam_pwm0_enableclk();
      priv = &g_pwm0;
      break;
#endif
#ifdef CONFIG_SAMV7_PWM1
    case 1:
      sam_pwm1_enableclk();
      priv = &g_pwm1;
      break;
#endif
    default:
      pwmerr("ERROR: PWM number invalid or not configured %d\n", pwm);
      return NULL;
  }

  return (struct pwm_lowerhalf_s *)priv;
}
